# demo-video-generator

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  STATUS.md  docker-compose.yml  index.html  pyproject.toml
chrome-extension/: background.js  content.js  manifest.json  popup.html  popup.js
chrome-extension/icons/: README.md
docs/: AI_PROMPT_OPTIMIZATION.md  LAUNCH_CHECKLIST.md  PRODUCT.md  PRODUCT_HUNT.md  QUICKSTART.md
examples/: api_request.json  demo.yaml  demo_prompts.py  simple_demo.yaml  test_ai_models.py
media/: README.md
src/demo_video_generator/: __init__.py
src/demo_video_generator/api/: __init__.py  app.py
src/demo_video_generator/cli/: __init__.py  main.py
src/demo_video_generator/core/: __init__.py  ai_generator.py  ai_generator_v2.py  merger.py  recorder.py  script.py  tts.py
